# 3D-city-model

./: README.md
data/: test.json  tudcampus.csv  tudcampus.geojson
src/: CMakeLists.txt  Point.h  main.cpp
treemaker/: CMakeCache.txt  CMakeLists.txt  Makefile  Point.h  Point.h:Zone.Identifier  TreeMaker.cpp  a.out  cmake_install.cmake  conformingterrain  output
